# docs/api/api.yaml
@@ -65,6 +65,29 @@ paths:
       security:
         - api_key: [ 'order-read' ]
 
+    delete:
+      operationId: "cancel-order"
+      description: Cancel an order
+      parameters:
+        - in: path
+          name: id
+          description: ID of the category
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        200:
+          description: Success
+        403:
+          description: The caller is not authorized to call this endpoint
+        409:
+          description: Error
+      tags:
+        - Order
+      security:
+        - api_key: [ 'order-manage' ]
+
 components:
   securitySchemes:
     api_key:
@@ -164,6 +187,11 @@ components:
           type: string
           format: date-time
           description: Last update
+        cancelled:
+          type: string
+          format: date-time
+          description: Cancellation date-time
+          nullable: true
 
     GetOrderResponse:
       type: object
